# Yoga-Poses-recommender_app

./: .gitignore  README.md  config.template.yaml  generate-descriptions.py  generate-image.py  generate-tts.py  import-data.py  invoke-gemini.py  main.py  pyproject.toml  requirements.txt  search-data.py  settings.py
data/: yoga_poses.json  yoga_poses_alldata.json  yoga_poses_with_descriptions.json
images/: README.md
templates/: index.html
